# Assistente-de-analises

./: Assistente de analises.sln
AZReports/: CMakeLists.txt  display_logic.cpp  display_logic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
AZReports/txt_files/: wiki_serverlist.txt  wiki_units.txt  wiki_vmwares.txt
build-AZReports-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/AZReports_autogen/include/: ui_mainwindow.h
cpp-test/: cpp-test.cpp  cpp-test.vcxproj  cpp-test.vcxproj.filters  texto_discord.txt
